--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ body{
   --card-foreground: oklch(0.8853 0 0);
   --popover: oklch(0.2435 0 0);
   --popover-foreground: oklch(0.8853 0 0);
-  --primary: oklch(0.7058 0 0);
+  --primary: oklch(94.309% 0.00011 271.152);
   --primary-foreground: oklch(0.2178 0 0);
   --secondary: oklch(0.3092 0 0);
   --secondary-foreground: oklch(0.8853 0 0);
